# ocaml-monad

./: .gitignore  Makefile  README.md  dune-project  functor.ml  functor.mli  monad.ml  monad.mli  monad.opam  option_monad.ml  simple-monad.opam  test.ml
src/: .merlin  dune  monad.ml  monad.mli
